# Pathfinder

./: CMakeLists.txt  LICENSE  README.md
src/: config.hpp  main.cpp
src/app/: app.cpp  app.hpp  input.cpp  input.hpp  window.cpp  window.hpp
src/renderer/: renderer.cpp  renderer.hpp
src/simulation/: a_star.cpp  a_star.hpp
